--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,17 +1,56 @@
 {% extends "index.html" %}
 {% load static %}
 {% block content %}
-{% include "includes/navbar.html" %} 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<nav
+  class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+  id="ftco-navbar"
+  style="position: absolute;"
+>
+  <div class="container">
+    <img src="{% static 'images/logo.png' %}" alt=""  width="80px"/>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#ftco-nav"
+      aria-controls="ftco-nav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="oi oi-menu"></span> Menu
+    </button>
+
+    <div class="collapse navbar-collapse" id="ftco-nav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active"><a href="{% url 'home_view' %}" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">About US</a></li>
+        <li class="nav-item"><a href="{% url 'property_list' %}" class="nav-link">Properties</a></li>
+        <li class="nav-item"><a href="{% url 'property_list' %}" class="nav-link">Our Projects</a></li>
+        {% comment %} <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Blog</a></li> {% endcomment %}
+        <li class="nav-item"><a href="#contact-us" class="nav-link">Contact US</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- Nav Ends -->
+<style>
+	#carouselExampleControls {
+		max-height: 100vh;
+	}
+
+	.carousel-inner .carousel-active img {
+		width: 120%%;
+		height: 100vh; /* Ensures the height adjusts proportionally to the width */
+    	object-fit: cover;
+	}
+</style>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" >
   <div class="carousel-inner">
+    <div class="carousel-item ">
+      <img src="{% static 'images/thumbnail2.jpeg' %}" class="d-block" alt="...">
+    </div>
     <div class="carousel-item active">
-      <img src="{% static 'images/thumbnail1.webp' %}" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'images/thumbnail2.jpeg' %}" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'images/thumbnail3.jpeg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/thumbnail3.jpeg' %}" class="d-block" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -22,6 +61,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+  </div>
 </div>
 {% comment %} <section class="hero-wrap hero-wrap-2 js-fullheight">
 	{% comment %} <div class="hero-wrap ftco-degree-bg"> {% endcomment %}
@@ -75,7 +115,7 @@
 			</div>
 			<div class="col-lg-7"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
-				<h5 class="section-about-title pe-3">About Us</h5>
+				<h1 class="section-about-title pe-3">About Us</h1>
 				<h1 class="mb-4">Welcome to <span class="text-primary">BhumiReality</span></h1>
 				<p class="mb-4">Alaska group is leading a team of the brightest minds in architecture,
 					G R O U P engineering and designing to develop the idea of township in a reality.</p>
@@ -155,7 +195,7 @@
 	<div class="container">
 		<div class="row justify-content-center mb-5">
 			<div class="col-md-7 text-center heading-section ftco-animate">
-				<h2 class="mb-3">Our Services</h2>
+				<h2 class="mb-3">Our Faculty</h2>
 			</div>
 		</div>
 		<div class="row h-100">
@@ -293,29 +333,29 @@
 					was incepted in 2006 with the intention of
 					dramatically transforming the real estate
 					city.</p>
-				<a class="btn btn-primary rounded-pill py-3 px-5 mt-2 read-btn" href="#contact-us">Learn More</a>
+				<a class="btn btn-primary rounded-pill py-3 px-5 mt-2 read-btn" style="border-color:#dc1666;" href="#contact-us">Learn More</a>
 			</div>
 		</div>
 
 			<div class="row justify-content-between g-5 mt-5">
-				<div class="col-sm mb-3">
-				<div class="card" style="width: 12rem;">
+				<div class="col-sm-6 col-md-3 mb-3">
+				<div class="card">
 					<img src="{% static 'images/realestate.jpg' %}" class="card-img-top" alt="...">
 					</div>
 				</div>
-				<div class="col-sm mb-3">
-				<div class="card" style="width: 12rem;">
+				<div class="col-sm-6 col-md-3 mb-3">
+				<div class="card">
 				<img src="{% static 'images/realestate.jpg' %}" class="card-img-top" alt="...">
 				</div>
 				</div>
-				<div class="col-sm mb-3">
-				<div class="card" style="width: 12rem;">
+				<div class="col-sm-6 col-md-3 mb-3">
+				<div class="card">
 					<img src="{% static 'images/realestate.jpg' %}" class="card-img-top" alt="...">
 					</div>
 				</div>
-				<div class="col-sm mb-3 ">
+				<div class="col-sm-6 col-md-3 mb-3 ">
 					<a href="{% url 'property_list' %}">
-						<div class="card" style="width: 12rem;background-color:#089188;height:8rem;">
+						<div class="card" style="height:10rem;background-color:#dc1666;">
 							<div class="card-body text-center text-white">
 								<p>View More</p>
 								<i class="fa fa-search"></i>
@@ -335,7 +375,7 @@
 		<div class="row justify-content-center">
 			<div class="col-md-12 heading-section text-center ftco-animate mb-5">
 				<span class="subheading mt-5">What we offer</span>
-				<h2 class="mb-2">Amenities</h2>
+				<h2 class="mb-2">Gallery</h2>
 			</div>
 		</div>
 		<div class="row">
@@ -351,7 +391,6 @@
 								<div class="d-flex mb-3">
 									<span class="cat">“Nature is where you belong"</span>
 								</div>
-								<button type="button" class="btn btn-primary btn-lg btn-block">Details</button>
 							</div>
 						</div>
 					</div>
@@ -365,7 +404,6 @@
 								<div class="d-flex mb-3">
 									<span class="cat">The Home is your playground!.</span>
 								</div>
-								<button type="button" class="btn btn-primary btn-lg btn-block">Details</button>
 							</div>
 						</div>
 					</div>
@@ -379,7 +417,6 @@
 								<div class="d-flex mb-3">
 									<span class="cat">Everyone Need a Healthy Life</span>
 								</div>
-								<button type="button" class="btn btn-primary btn-lg btn-block">Details</button>
 							</div>
 						</div>
 					</div>
@@ -393,7 +430,6 @@
 								<div class="d-flex mb-3">
 									<span class="cat">Lets through the senses of FIVE</span>
 								</div>
-								<button type="button" class="btn btn-primary btn-lg btn-block">Details</button>
 							</div>
 						</div>
 					</div>
