--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -45,7 +45,6 @@
           <h2 class="ftco-heading-2">Customer Support</h2>
           <ul class="list-unstyled">
             <li><a href="#" class="py-2 d-block">FAQ</a></li>
-            <li><a href="#" class="py-2 d-block">Payment Option</a></li>
             <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
             <li><a href="#" class="py-2 d-block">How it works</a></li>
             <li><a href="#" class="py-2 d-block">Contact Us</a></li>
@@ -60,14 +59,8 @@
               <li>
                 <span class="icon icon-map-marker"></span
                 ><span class="text"
-                  >City Office : 6, Alaska Tower, Ranibagh, Khandwa Road, Indore
-                  - 452020</span
-                >
-              </li>
-              <li>
-                <span class="icon icon-map-marker"></span
-                ><span class="text"
-                  >Site Office : Badipura, NH-59, Betma Main Road.</span
+                  >City Office : Bhumi realty 
+01 ellite empire shivdham limbodi indore</span
                 >
               </li>
               <li>
@@ -79,7 +72,7 @@
               <li>
                 <a href="#"
                   ><span class="icon icon-envelope"></span
-                  ><span class="text"> nareshjaiswani0777@gmail.com</span></a
+                  ><span class="text email-text">nareshjaiswani0777@gmail.com</span></a
                 >
               </li>
             </ul>
